# wora

./: .gitignore  CMakeLists.txt  LICENSE  README.md  configure
src/: CMakeLists.txt
src/core/: CMakeLists.txt  calculator.cc  calculator.h
src/node/: CMakeLists.txt  binding.cc  binding.gyp  node_calculator.cc  node_calculator.h  package.json
src/server/: CMakeLists.txt
test/: CMakeLists.txt
